Fixed scaling issue on smaller devices for search bar

--- a/assets/css/header.scss
+++ b/assets/css/header.scss
@@ -78,14 +78,5 @@ header {
 }
 
 .header-search {
-  input {
-    margin: 0;
-  }
-  .fa-search:before {
-    content: "\f002";
-  }
-  @media (min-width: 576px) {
-    display: block !important;
-    width: 370px;
-  }
+  width: 100%;
 }
